Bug 286876 - korganizer month view fails to show events starting previous month
Summary: korganizer month view fails to show events starting previous month
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: 4.7
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-11-17 20:39 UTC by Reimar Imhof
Modified: 2011-11-19 15:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
consider event start _and_ end in selection (984 bytes, patch)
2011-11-17 20:48 UTC, Reimar Imhof
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Reimar Imhof 2011-11-17 20:39:07 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

Regression in korganizer / kontact 4.7.2 (coming with suse 12.1) compared to korganizer 4.4.10 (coming with suse 11.4).
If you have an event starting in the middle of a previous month (or earlier), that event isn't shown in this month in the korganizer month view.
-> see steps to reproduce...

Reproducible: Always

Steps to Reproduce:
1.) start korganizer (for example from openSuse 12.1 kde-live-cd or fresh 12.1 install)
2.) enter event from 2011-10-15 to 2011-11-20.
3.) go to month view
4.) select October 2011 in month view -> you see start of event
5.) select November 2011 in month view

Actual Results:  
The event lasting until 20th of November isn't shown in the month view.

Expected Results:  
The event should be visible.

This was no problem with old korganizer 4.4.10 shipped with suse 11.4.
Funny: Printing seems to be ok.
Comment 1 Reimar Imhof 2011-11-17 20:48:54 UTC
Created attachment 65797 [details]
consider event start _and_ end in selection

This patch compares event begin _and_ end with shown month begin/end. For me it solves the problem - I hope it's helpful!
Comment 2 Sergio Martins 2011-11-19 15:05:26 UTC
Git commit 4fbd25490042b4994d410b54c901078e31e61994 by Sergio Martins.
Committed on 19/11/2011 at 15:58.
Pushed by smartins into branch 'master'.

Event crossing month bounderies wasn't being shown.

Patch by Reimar Imhof.

I changed it a bit and replaced downcasts with date roles.

BUG: 286876
BUG: 286984

M  +4    -13   calendarviews/eventviews/month/monthview.cpp

http://commits.kde.org/kdepim/4fbd25490042b4994d410b54c901078e31e61994
Comment 3 Sergio Martins 2011-11-19 15:06:10 UTC
Git commit 69554e88f51faa7c02d6453286790542a39b7ed8 by Sergio Martins.
Committed on 19/11/2011 at 15:58.
Pushed by smartins into branch 'KDE/4.7'.

Event crossing month bounderies wasn't being shown.

Patch by Reimar Imhof.

I changed it a bit and replaced downcasts with date roles.

BUG: 286876
BUG: 286984
(cherry picked from commit 4fbd25490042b4994d410b54c901078e31e61994)

M  +4    -13   calendarviews/eventviews/month/monthview.cpp

http://commits.kde.org/kdepim/69554e88f51faa7c02d6453286790542a39b7ed8